--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,7 +19,8 @@
     <!--<link rel="stylesheet" href="../static/css/bootstrap.min.css">-->
     <!--<link rel="stylesheet" href="../static/css/style.css">-->
     <!--<link rel="shortcut icon" type="image/png" href="../static/img/favicon.png">-->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script th:src="@{https://code.jquery.com/jquery-3.3.1.min.js}"></script>
+
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -173,7 +174,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
                     <div class="testimonial-content">
-                        <img src="../static/img/sweing-1.jpg" alt="Image">
+                        <img th:src="@{/img/sweing-1.jpg}" alt="Image"/>
                         <h2>Техника под наем</h2>
                         <a href="rents.html" class="content-link">Повече</a>
                         <br>
