Remote loading of img files working.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -174,7 +174,8 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
                     <div class="testimonial-content">
-                        <img th:src="@{/img/sweing-1.jpg}" alt="Image"/>
+                        <!--<img th:src="@{/img/sweing-1.jpg}" alt="Image"/>-->
+                        <img th:src="@{https://i.imgur.com/kHoI5OC.jpg}" alt="Image"/>
                         <h2>Техника под наем</h2>
                         <a href="rents.html" class="content-link">Повече</a>
                         <br>
