Local img loading with ThymeLeaf fixed.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -65,7 +65,7 @@
             <div class="row text-center inner">
                 <div class="col-sm-4">
                     <div class="feature-content">
-                        <img src="../static/img/1-1.jpg" alt="Image">
+                        <img th:src="@{/img/1-1.jpg}" alt="Image"/>
                         <h2 class="feature-content-title green-text">Конструиране на облекла</h2>
                         <p class="feature-content-description">Разработване на основни конструкции на модел по снимка,
                             скица или готово ушита дреха, а също така и модифициране на вече съществуващи модели на
@@ -76,7 +76,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="feature-content">
-                        <img src="../static/img/grading.jpg" alt="Image">
+                        <img th:src="@{/img/grading.jpg}" alt="Image"/>
                         <h2 class="feature-content-title blue-text">Градиране/Размножаване</h2>
                         <p class="feature-content-description">Размножаването представлява градиране на готов модел, при
                             което се получават уголемени/умалени в съответствие със стандартните типоразмери образи на
@@ -88,7 +88,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="feature-content">
-                        <img src="../static/img/marker.jpg" alt="Image">
+                        <img th:src="@{/img/marker.jpg}" alt="Image"/>
                         <h2 class="feature-content-title red-text">Подреждане на маркери</h2>
                         <p class="feature-content-description">Чрез услугата редене на Маркери (капаци за кроене) вие
                             постигате ниска себестойност на произвежданите облекла и спестявате плат. Цената за услугата
@@ -108,7 +108,7 @@
             <div class="row text-center inner">
                 <div class="col-sm-6">
                     <div class="blog-content">
-                        <img src="../static/img/3d-1.jpg" alt="Image">
+                        <img th:src="@{/img/3d-1.jpg}" alt="Image"/>
                         <h2>3-D Runway Designer</h2>
                         <p>Благодарение на интуитивен комплект от закономерности и помощна програма за изработване на
                             предварителна скица е построен 3D план с реални размери и показва асортименти на завършени
@@ -118,7 +118,7 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="blog-content">
-                        <img src="../static/img/book.jpg" alt="Image">
+                        <img th:src="@{/img/book.jpg}" alt="Image"/>
                         <h2>Обучение</h2>
                         <p>Обучение е подходящо за Вас ако желаете самостоятелно да конструирате и моделирате с помоща
                             на CAD/CAM софтуер. Ще усвоите система включваща уникални методи за автоматизирано и ръчно
@@ -156,7 +156,7 @@
             <div class="row text-center">
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
                     <div class="testimonial-content">
-                        <img src="../static/img/fabrics.jpg" alt="Image">
+                        <img th:src="@{/img/fabrics.jpg}" alt="Image"/>
                         <h2>Платове</h2>
                         <a href="fabrics-gallery.html" class="content-link">Повече</a>
                         <br>
@@ -164,7 +164,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
                     <div class="testimonial-content">
-                        <img src="../static/img/aks.jpg" alt="Image">
+                        <img th:src="@{/img/aks.jpg}" alt="Image"/>
                         <h2>Кинкалерия</h2>
                         <p>Пластмасови и метални копчета, ципове, конуси и много друго.</p>
                         <a href="#" class="content-link">Повече</a>
@@ -174,8 +174,8 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
                     <div class="testimonial-content">
-                        <!--<img th:src="@{/img/sweing-1.jpg}" alt="Image"/>-->
-                        <img th:src="@{https://i.imgur.com/kHoI5OC.jpg}" alt="Image"/>
+                        <img th:src="@{/img/sweing-1.jpg}" alt="Image"/>
+                        <!--<img th:src="@{https://i.imgur.com/kHoI5OC.jpg}" alt="Image"/>-->
                         <h2>Техника под наем</h2>
                         <a href="rents.html" class="content-link">Повече</a>
                         <br>
@@ -183,7 +183,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 col-xxs-12">
                     <div class="testimonial-content">
-                        <img src="../static/img/forum.jpg" alt="Image">
+                        <img th:src="@{/img/forum.jpg}" alt="Image"/>
                         <h2>Форум</h2>
                         <p>Споделяне на информация по множество професионални теми</p>
                         <a href="#" class="content-link">Повече</a>
@@ -196,7 +196,7 @@
                 <div class="col-lg-12">
                     <div>
                         <h2 class="center">Портфолио</h2>
-                        <img src="../static/img/portfolio1.jpg" alt="Image" class="img-responsive">
+                        <img th:src="@{/img/portfolio1.jpg}" alt="Image" class="img-responsive"/>
                         <div id="includedContent"></div>
 
                         <!--<a href="portfolio.html" class="content-link center">Повече</a>-->
