--- a/src/main/resources/templates/button-rotate.html
+++ b/src/main/resources/templates/button-rotate.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.thymeleaf.org ">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Колекции от готови кройки</title>
-
-    <link href="../static/css/btn-rotate.css" rel="stylesheet"/>
+    <link th:href="@{/css/btn-rotate.css}" rel="stylesheet"/>
 </head>
 <body>
 
@@ -17,7 +17,6 @@
     <span class="btnflip-item btnflip__center"></span>
     <span class="btnflip-item btnflip__back">Натисни</span>
 </a></div>
-
-<script src="../static/js/btn-rotate.js"></script>
+<script th:src="@{/js/btn-rotate.js}"></script>
 </body>
 </html>
