--- a/src/main/resources/templates/fabrics-gallery.html
+++ b/src/main/resources/templates/fabrics-gallery.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html >
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.thymeleaf.org ">
 <head>
   <meta charset="UTF-8">
   <title>Платове и консумативи</title>
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
-  <link rel="shortcut icon" type="image/png" href="../static/img/favicon.png">
-  <link href="../static/css/portfolio.css" rel="stylesheet"/>
-  <link href="../static/css/gallery.css" rel="stylesheet"/>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+  <link rel="shortcut icon" type="image/png" th:href="@{/img/favicon.png}">
+  <link th:href="@{/css/portfolio.css}" rel="stylesheet"/>
+  <link th:href="@{/css/gallery.css}" rel="stylesheet"/>
+  <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js}"></script>
 </head>
 
 <body>
@@ -171,7 +172,7 @@
         </div>
       </div>
     </div>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src="../static/js/portfolio.js"></script>
+<script th:src="@{http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js}"></script>
+<script th:src="@{/js/portfolio.js}"></script>
 </body>
 </html>
