--- a/src/main/resources/templates/gallery-3col.html
+++ b/src/main/resources/templates/gallery-3col.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.thymeleaf.org ">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Галерия</title>
@@ -7,29 +8,29 @@
 
     <!-- CSS
     ================================================== -->
-    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../static/css/bootstrap.css">
-    <link rel="stylesheet" href="../static/css/bootstrap-responsive.css">
-    <link rel="stylesheet" href="../static/css/prettyPhoto.css"/>
-    <link rel="stylesheet" href="../static/css/custom-styles.css">
+    <link th:href="@{http://fonts.googleapis.com/css?family=Oswald}" rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
+    <link rel="stylesheet" th:href="@{/bootstrap-responsive.css}">
+    <link rel="stylesheet" th:href="@{/css/prettyPhoto.css}"/>
+    <link rel="stylesheet" th:href="@{/css/custom-styles.css}">
 
     <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <link rel="stylesheet" href="../static/css/style-ie.css"/>
+    <script th:src="@{http://html5shim.googlecode.com/svn/trunk/html5.js}"></script>
+    <link rel="stylesheet" th:href="@{/css/style-ie.css}"/>
     <![endif]-->
 
     <!-- Favicon
     ================================================== -->
-    <link rel="shortcut icon" type="image/png" href="../static/img/favicon.png">
+    <link rel="shortcut icon" type="image/png" th:href="@{/img/favicon.png}">
 
     <!-- JS
     ================================================== -->
-    <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-    <script src="../static/js/jquery.easing.1.3.js"></script>
-    <script src="../static/js/bootstrap.js"></script>
-    <script src="../static/js/jquery.prettyPhoto.js"></script>
-    <script src="../static/js/jquery.quicksand.js"></script>
-    <script src="../static/js/jquery.custom.js"></script>
+    <script th:src="@{http://code.jquery.com/jquery-1.8.3.min.js}"></script>
+    <script th:src="@{static/js/jquery.easing.1.3.js}"></script>
+    <script th:src="@{static/js/bootstrap.js}"></script>
+    <script th:src="@{static/js/jquery.prettyPhoto.js}"></script>
+    <script th:src="@{static/js/jquery.quicksand.js}"></script>
+    <script th:src="@{static/js/jquery.custom.js}"></script>
 
 
 </head>
