--- a/src/main/resources/templates/portfolio.html
+++ b/src/main/resources/templates/portfolio.html
@@ -1,14 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.thymeleaf.org ">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Колекции от готови кройки</title>
-    <link rel="shortcut icon" type="image/png" href="../static/img/favicon.png">
-    <link href="../static/css/portfolio.css" rel="stylesheet"/>
-    <link rel="shortcut icon" type="image/png" href="../static/img/favicon.png">
+    <link rel="shortcut icon" type="image/png" th:href="@{/img/favicon.png}">
+    <link th:href="@{/css/portfolio.css}" rel="stylesheet"/>
+    <link rel="shortcut icon" type="image/png" th:href="@{/img/favicon.png}">
 
 </head>
 <body>
@@ -27,6 +28,6 @@
         </nav>
     </div>
 </div>
-<script src="../static/js/portfolio.js"></script>
+<script th:src="@{/js/portfolio.js}"></script>
 </body>
 </html>
