--- a/src/main/resources/templates/rents.html
+++ b/src/main/resources/templates/rents.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.thymeleaf.org ">
 <head>
     <meta charset="UTF-8">
     <title>Конструиране на облекла</title>
@@ -8,15 +9,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-    <link href="../static/css/gallery.css" rel="stylesheet"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="shortcut icon" type="image/png" href="../static/img/favicon.png">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css}">
+    <link th:href="@{/css/gallery.css}" rel="stylesheet"/>
+    <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js}"></script>
+    <link th:href="@{https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700}" rel="stylesheet">
+    <link th:href="@{https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700}" rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="shortcut icon" type="image/png" th:href="@{img/favicon.png}">
+    <script th:src="@{https://code.jquery.com/jquery-3.3.1.min.js}"></script>
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -232,13 +233,13 @@
 </footer>
 <!-- End Footer Area -->
 
-<script src="../static/js/video.js"></script>
-<script src="../static/js/jquery.scrollUp.min.js"></script> <!-- https://github.com/markgoodyear/scrollup -->
-<script src="../static/js/jquery.singlePageNav.min.js"></script> <!-- https://github.com/ChrisWojcik/single-page-nav -->
-<script src="../static/js/parallax.js-1.3.1/parallax.js"></script> <!-- http://pixelcog.github.io/parallax.js/ -->
-<script src="../static/js/jquery.actions.js"></script>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script th:src="@{/js/video.js}"></script>
+<script th:src="@{/js/jquery.scrollUp.min.js}"></script> <!-- https://github.com/markgoodyear/scrollup -->
+<script th:src="@{/js/jquery.singlePageNav.min.js}"></script> <!-- https://github.com/ChrisWojcik/single-page-nav -->
+<script th:src="@{/js/parallax.js-1.3.1/parallax.js}"></script> <!-- http://pixelcog.github.io/parallax.js/ -->
+<script th:src="@{/js/jquery.actions.js}"></script>
+<script th:src="@{http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js}"></script>
+<script th:src="@{https://code.jquery.com/jquery-3.3.1.min.js}"></script>
 
 </body>
 </html>
