--- a/src/main/resources/templates/page-contact.html
+++ b/src/main/resources/templates/page-contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.thymeleaf.org ">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Контакт</title>
@@ -14,20 +15,19 @@
 <link rel="stylesheet" href="../static/css/custom-styles.css">
 
 
-<!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script th:src="@{http://html5shim.googlecode.com/svn/trunk/html5.js}"></script>
     <link rel="stylesheet" href="../static/css/style-ie.css"/>
     <![endif]-->
 
 <!-- Favicons
 ================================================== -->
-    <link rel="shortcut icon" type="image/png" href="../static/img/favicon.png">
+    <link rel="shortcut icon" type="image/png" th:href="@{/static/img/favicon.png}">
 
 <!-- JS
 ================================================== -->
-<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-<script src="../static/js/bootstrap.js"></script>
-<script src="../static/js/jquery.custom.js"></script>
+<script th:src="@{http://code.jquery.com/jquery-1.8.3.min.js}"></script>
+<script th:src="@{/static/js/bootstrap.js}"></script>
+<script th:src="@{/static/js/jquery.custom.js}"></script>
 
 
 
@@ -44,7 +44,7 @@
         <!-- Logo
         ================================================== -->
           <div class="span5 logo">
-              <a href="home.html"><img src="../static/img/style-logo.png" alt="" /></a>
+              <a href="home.html"><img th:src="@{/static/img/style-logo.png}" alt="" /></a>
               <h5>Стил... Изящество</h5>
           </div>
         
@@ -145,7 +145,7 @@
             </address>
 
             <h5 class="title-bg">Намерете ни</h5>
-            <img src="../static/img/location-map.jpg" alt="map">
+            <img th:src="@{/static/img/location-map.jpg}" alt="map">
 
         </div><!-- End sidebar column -->
 
@@ -160,7 +160,7 @@
             <div class="row footer-row">
                 <div class="span3 footer-col">
                     <h5>Свържете се с нас</h5>
-                    <img src="../static/img/style-logo.png" alt="Piccolo"/><br/><br/>
+                    <img th:src="@{/static/img/style-logo.png}" alt="Piccolo"/><br/><br/>
                     <address>
                         <strong>Бест Стайл ЕООД</strong><br/>
                         София<br/>
