GetMapping to portfolio.html

--- a/src/main/resources/templates/button-rotate.html
+++ b/src/main/resources/templates/button-rotate.html
@@ -12,11 +12,12 @@
 <body>
 
 <div>
-    <a class="btnflip" href="gallery-3col.html">
+    <a class="btnflip" th:href="@{/gallery-3col.html}">
     <span class="btnflip-item btnflip__front">Повече</span>
     <span class="btnflip-item btnflip__center"></span>
     <span class="btnflip-item btnflip__back">Натисни</span>
-</a></div>
+    </a>
+</div>
 <script th:src="@{/js/btn-rotate.js}"></script>
 </body>
 </html>
