--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -195,7 +195,7 @@
                         <img th:src="@{/img/portfolio1.jpg}" alt="Image" class="img-responsive"/>
                         <div id="includedContent"></div>
 
-                        <!--<a href="portfolio.html" class="content-link center">Повече</a>-->
+                        <a th:href="@{/portfolio}" class="content-link center">Повече</a>
                     </div>
                 </div>
             </div>
