Project working, before adding JPA Repo.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -36,7 +36,10 @@
                 <li><a href="#section4">Контакт</a></li>
                 <li><a href="#section5">Портфолио</a></li>
                 <li><a href="#section6">Optitex</a></li>
+                <!--<li><a href="/best_style">Log in | Register</a></li>-->
             </ul>
+            <!--<a th:href="@{/best_style}">Log in | Register</a>-->
+            <a href="/best_style">Log in | Register</a>
         </div>
     </div>
 </nav>
@@ -195,7 +198,8 @@
                         <img th:src="@{/img/portfolio1.jpg}" alt="Image" class="img-responsive"/>
                         <div id="includedContent"></div>
 
-                        <a th:href="@{/portfolio}" class="content-link center">Повече</a>
+                        <a th:href="@{/best_style}" class="content-link center">Повече</a>
+                        <!--<a th:href="@{/best_style}" class="content-link center">Повече</a>-->
                     </div>
                 </div>
             </div>
